src/css/notification.css
.notificationParent{
    display: block;
    position: absolute;
    pointer-events: none;
}

.hoverNotificationHighlight{
    display: block;
    background-color: rgba(255, 191, 94, 0.3);
    position: absolute;
    border-radius: 10%;
}

.hoverNotificationHover{
    display: block;
    background-color: rgba(247, 201, 131, 1);
    position: relative;
    border-radius: 5px;
    padding: 2pt;
    height: fit-content;
    font-size: 10pt;
    color: black;
    font-weight: 700;
    overflow-y: scroll;
}

.popUpNotification{
    background-color: #f7c983;
    opacity: 0.7;
    position: relative;
    border-radius: 10%;

    left: 200px;
    top: 200px;
    width: 200px;
    height: 200px;
}

